[gd_scene load_steps=3 format=3 uid="uid://vwybhc32v1ms"]

[ext_resource type="Script" path="res://defenders/defender-picker.gd" id="1_ii1ad"]

[sub_resource type="LabelSettings" id="LabelSettings_e5yu7"]
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="DefenderPicker" type="Panel"]
custom_minimum_size = Vector2(128, 128)
offset_right = 192.0
offset_bottom = 192.0
script = ExtResource("1_ii1ad")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="PickEffect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.505882)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_e5yu7")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="property_list_changed" from="." to="." method="_on_property_list_changed"]
[connection signal="ready" from="." to="." method="_on_ready"]
